maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:26: error: type mismatch;
 found   : Unit
 required: Int
  println("erreur")
         ^